--- a/style/style.css
+++ b/style/style.css
@@ -3,20 +3,29 @@
 :root {
   --primary-color: #00bdaa;
   --secondary-color: #edf9ed;
+  --third-color: #45cfc1;
 }
 * {
   font-family:"Poppins",
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-#login_form {
+#login_form_container,#login_form_header {
+  display: flex;
+  background-color: var(--primary-color);
+  width: 30vw;
+
+  color: white;
+
+}
+
+#login_form_container{
   display: flex;
   background-color: var(--primary-color);
   flex-direction: column;
-  width: 40vw;
   padding: 35px;
   color: white;
-  border-radius: 15px;
+  border-radius:0 0 15px 15px ;
 }
 
 button,
@@ -69,7 +78,8 @@ input:focus {
 
 #login_title {
   font-weight: 800;
-
+  font-size: 2.2rem;
+  margin: 15px;
 }
 
 #submit_login {
@@ -91,7 +101,7 @@ input:focus {
 }
 
 #login_container{
-    margin: 22px 0;
+    margin: 15px 0 0 0;
     display: flex;
     flex-direction: column;
 }
@@ -106,14 +116,31 @@ input:focus {
 }
 
 @media (max-width: 768px){
-#login_form{
+#login_form_container, #login_form_header{
     width: 60vw;
 }
 }
 
-@media (min-width: 1024px){
-    #login_form{
-        width: 40vw;
+@media (max-width: 1024px){
+    #login_form_container, #login_form_header{
+        width: 50vw;
     }
     }
     
+#email_input{
+  margin-bottom: 10px;
+}
+
+#password_input{
+  margin-bottom: 20px;
+}
+
+
+#login_form_header{
+  background-color: var(--third-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding:  0 35px;
+  border-radius: 15px 15px 0 0;
+}
