--- a/style/style.css
+++ b/style/style.css
@@ -144,3 +144,17 @@ input:focus {
   padding:  0 35px;
   border-radius: 15px 15px 0 0;
 }
+
+@media (max-width: 425px) {
+  #login_form_container, #login_form_header{
+    width: 70vw;
+}
+
+#login_form_container{
+  padding: 25px;
+}
+#login_form_header{
+  padding:  0 25px;
+}
+
+}
