--- a/public/style/style.css
+++ b/public/style/style.css
@@ -47,7 +47,7 @@ input:focus {
 }
 
 #login_section {
-  height: 80vh;
+  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -191,7 +191,7 @@ background-color: var(--primary-color);
   width: 18px;
   border-radius: 10px  0 0 10px;
   background-color: var(--third-color);
-  transition: width 1s ease-in-out;
+  transition: width 0.6s ease-in-out;
   overflow: hidden;
   position: absolute; /* Ajoute cette ligne */
   right: 0;
@@ -205,4 +205,45 @@ width: 100px;
 
 #username{
   padding-left: 18px;
+}
+
+
+
+/* home */
+
+#home_schedule{
+  width: calc(95% - 100px) ;
+  display: flex;
+  justify-content: space-around;
+ 
+}
+
+#home_hour,#home_schedule{
+  height: 100px;
+  margin: 10px auto ;
+  border-radius: 15px;
+  background-color: var(--primary-color);
+  align-items: center;
+}
+
+.schedule_container{
+  background-color: var(--third-color);
+  height: 70%;
+  width: 80px;
+  border-radius: 15px;
+  
+}
+
+#first_home_row{
+  display: flex;
+  width: 100vw;
+}
+
+#home_hour{
+  width: 100px;
+}
+
+#home_section{
+  max-width: 100vw;
+  
 }
