--- a/public/style/style.css
+++ b/public/style/style.css
@@ -163,8 +163,6 @@ input:focus {
 
 
 
-/* header */
-
 header{
 display: flex;
 align-items: center;
@@ -175,36 +173,39 @@ background-color: var(--primary-color);
 #header,#user_info{
   display: flex;
   align-items: center;
-  padding: 10px;
-  height: 50px;
+  /* padding: 10px; */
+  /* height: 70px; */
   
 }
 
-#header{
-  width: 100%;
-  color: white;
-  justify-content: center;
-}
 
 
 #user_info{
-  width: 18px;
+ width: auto;
   border-radius: 10px  0 0 10px;
   background-color: var(--third-color);
   transition: width 0.6s ease-in-out;
-  overflow: hidden;
-  position: absolute; /* Ajoute cette ligne */
+  display: flex;
+  position: absolute; 
   right: 0;
   color: white;
+  justify-content: center;
+  align-items: center;
+}
 
-}
-#user_info:hover{
+/* #user_info i{
+ 
+} */
+header {
+  position: relative;
   
-width: 100px;
 }
+
+
+
 
 #username{
-  padding-left: 18px;
+ padding: 10px; 
 }
 
 
@@ -228,7 +229,7 @@ width: 100px;
 
 .schedule_container{
   background-color: var(--third-color);
-  height: 70%;
+  height: 80px;
   width: 80px;
   border-radius: 15px;
   
@@ -241,8 +242,18 @@ width: 100px;
 
 #home_hour{
   width: 100px;
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
+.hour{
+  color: white;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
 #home_section{
   max-width: 100vw;
   
