--- a/public/style/style.css
+++ b/public/style/style.css
@@ -14,10 +14,7 @@
 #login_form_container,#login_form_header {
   display: flex;
   background-color: var(--primary-color);
-  width: 30vw;
-
   color: white;
-
 }
 
 #login_form_container{
@@ -31,7 +28,7 @@
 
 button,
 input {
-    border: none;
+  border: none;
   padding: 10px;
   background-color: #ffffffc1;
   
@@ -44,6 +41,10 @@ label{
 
 input:focus {
   outline: none;
+}
+
+p{
+  margin: 0;
 }
 
 #login_section {
@@ -79,7 +80,6 @@ input:focus {
 
 #login_title {
   font-weight: 800;
-  font-size: 2.2rem;
   margin: 15px;
 }
 
@@ -90,7 +90,6 @@ input:focus {
   border: white 3px solid;
   background-color: #00bdaa;
   color: white;
-  font-size: 1.2rem;
   font-weight: bold;
   transition:background-color 0.5s;
 }
@@ -98,7 +97,6 @@ input:focus {
 #submit_login:hover,#login_choice button:hover {
     background-color: #ffffff45;
     cursor: pointer;
-   
 }
 
 #login_container{
@@ -116,17 +114,6 @@ input:focus {
     width: 2px;
 }
 
-@media (max-width: 768px){
-#login_form_container, #login_form_header{
-    width: 60vw;
-}
-}
-
-@media (max-width: 1024px){
-    #login_form_container, #login_form_header{
-        width: 50vw;
-    }
-    }
     
 #email_input{
   margin-bottom: 10px;
@@ -146,23 +133,6 @@ input:focus {
   border-radius: 15px 15px 0 0;
 }
 
-@media (max-width: 425px) {
-  #login_form_container, #login_form_header{
-    width: 70vw;
-}
-
-#login_form_container{
-  padding: 25px;
-}
-#login_form_header{
-  padding:  0 25px;
-}
-
-}
-
-
-
-
 header{
 display: flex;
 align-items: center;
@@ -173,9 +143,6 @@ background-color: var(--primary-color);
 #header,#user_info{
   display: flex;
   align-items: center;
-  /* padding: 10px; */
-  /* height: 70px; */
-  
 }
 
 
@@ -193,9 +160,7 @@ background-color: var(--primary-color);
   align-items: center;
 }
 
-/* #user_info i{
- 
-} */
+
 header {
   position: relative;
   
@@ -256,5 +221,4 @@ header {
 }
 #home_section{
   max-width: 100vw;
-  
 }
