--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,34 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
   --primary-color: #00bdaa;
-  --secondary-color: #edf9ed;
-  --third-color: #45cfc1;
+  --secondary-color: #45cfc1;
 }
 * {
-  font-family:"Poppins",
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    margin: 0;
+  font-family: "Poppins", Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+  margin: 0;
 }
 
-a{
+a {
   text-decoration: none;
   color: unset;
 }
 
-#login_form_container,#login_form_header {
+#login_form_container,
+#login_form_header {
   display: flex;
   background-color: var(--primary-color);
   color: white;
 }
 
-#login_form_container{
+#login_form_container {
   display: flex;
   background-color: var(--primary-color);
   flex-direction: column;
   padding: 35px;
   color: white;
-  border-radius:0 0 15px 15px ;
+  border-radius: 0 0 15px 15px;
 }
 
 button,
@@ -36,19 +36,18 @@ input {
   border: none;
   padding: 10px;
   background-color: #ffffffc1;
-  
 }
 
-label{
-    margin-bottom: 3px;
-    margin-left: 3px;
+label {
+  margin-bottom: 3px;
+  margin-left: 3px;
 }
 
 input:focus {
   outline: none;
 }
 
-p{
+p {
   margin: 0;
 }
 
@@ -60,27 +59,28 @@ p{
   flex-direction: column;
 }
 
-#login_choice {
+#login_choice div {
   width: 100%;
-  height: 50px;
   display: flex;
 }
-
-#login_choice button:first-of-type {
+#animator_button {
   border-radius: 15px 0 0 15px;
-  border-right: 0px;
 }
 
-#login_choice button:last-of-type {
+#admin_button {
   border-radius: 0 15px 15px 0;
-  border-left: 0px;
+}
+
+#student_button {
+  border-radius: 15px 15px 15px 15px;
 }
 
 #login_choice button {
-  width: 50%;
+  width: 100%;
   height: 100%;
   background-color: #ffffffc1;
-  transition:background-color 0.5s;
+  transition: background-color 0.5s;
+  margin: 2px;
 }
 
 #login_title {
@@ -88,148 +88,141 @@ p{
   margin: 15px;
 }
 
-
 /* border-radius: 25px; */
 #submit_login {
-
   padding: 15px 20px;
-  margin:  15px 0 ;
+  margin: 15px 0;
   border: white 3px solid;
   background-color: #00bdaa;
   color: white;
   font-weight: bold;
-  transition:background-color 0.5s;
+  transition: background-color 0.5s;
 }
 
-#submit_login:hover,#login_choice button:hover {
-    background-color: #ffffff45;
-    cursor: pointer;
+#submit_login:hover,
+#login_choice button:hover {
+  background-color: #ffffff45;
+  cursor: pointer;
 }
 
-#login_container{
-    margin: 15px 0 0 0;
-    display: flex;
-    flex-direction: column;
+#login_container {
+  margin: 15px 0 0 0;
+  display: flex;
+  flex-direction: column;
 }
 
-#login_container input{
-    border-radius: 15px;
-    padding: 13px 10px;
+#login_container input {
+  border-radius: 15px;
+  padding: 13px 10px;
 }
 
-#login_separation{
-    width: 2px;
-}
-
-    
-#email_input{
+#email_input {
   margin-bottom: 10px;
 }
 
-#password_input{
+#password_input {
   margin-bottom: 20px;
 }
 
-
-#login_form_header{
-  background-color: var(--third-color);
+#login_form_header {
+  background-color: var(--secondary-color);
   display: flex;
   align-items: center;
   justify-content: center;
-  padding:  0 35px;
+  padding: 0 35px;
   border-radius: 15px 15px 0 0;
 }
 
-header{
-display: flex;
-align-items: center;
-justify-content: space-between;
-background-color: var(--primary-color);
-position: relative;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--primary-color);
+  position: relative;
 }
 
-#header,#user_info{
+#header,
+#user_info {
   display: flex;
   align-items: center;
 }
 
-
-
-#user_info{
- width: auto;
-  border-radius: 10px  0 0 10px;
-  background-color: var(--third-color);
+#user_info {
+  width: auto;
+  border-radius: 10px 0 0 10px;
+  background-color: var(--secondary-color);
   transition: width 0.6s ease-in-out;
   display: flex;
-  position: absolute; 
+  position: absolute;
   right: 0;
   color: white;
   justify-content: center;
   align-items: center;
 }
 
-
-
-
-
-
-
-#username{
- padding: 10px; 
+#username {
+  padding: 10px;
 }
-
-
 
 /* home */
 
-#home_schedule{
-  width: calc(95% - 100px) ;
+#home_schedule {
+  width: calc(95% - 100px);
   display: flex;
   justify-content: space-around;
- 
 }
 
-#home_hour,#home_schedule{
+#home_hour,
+#home_schedule {
   height: 100px;
-  margin: 10px auto ;
+  margin: 10px auto;
   border-radius: 15px;
   background-color: var(--primary-color);
   align-items: center;
 }
 
-.schedule_container{
-  background-color: var(--third-color);
+.schedule_container {
+  background-color: var(--secondary-color);
   height: 80px;
   width: 80px;
   border-radius: 15px;
-  
 }
 
-#first_home_row{
+#first_home_row {
   display: flex;
   width: 100vw;
 }
 
-#home_hour{
+#home_hour {
   width: 100px;
- 
+
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
-.hour{
+.hour {
   color: white;
   font-weight: 600;
   font-size: 1.2rem;
 }
-#home_section{
+#home_section {
   max-width: 100vw;
 }
 
-
-#sign_canvas{
+#sign_canvas {
   border: 1px solid black;
-
 }
+
+#settings_container {
+  background-color: var(--primary-color);
+}
+
+#settings_section h1,
+#settings_section {
+  background-color: var(--secondary-color);
+}
+
+/* .settings_line span{
+background-color: var(--primary-color);
+} */
