--- a/public/style/style.css
+++ b/public/style/style.css
@@ -10,7 +10,7 @@ input::-webkit-inner-spin-button {
   --primary-color: #00bdaa;
   --secondary-color: #45cfc1;
   --third-color: #00ad9b;
-  --hover-color:#84848445;
+  --hover-color: #84848445;
 }
 * {
   font-family: "Poppins", Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -22,29 +22,14 @@ a {
   text-decoration: none;
   color: unset;
 }
-
-#login_form_container,
-#login_form_header {
-  display: flex;
-  background-color: var(--primary-color);
-  color: white;
-}
-
-#login_form_container {
-  display: flex;
-  background-color: var(--primary-color);
-  flex-direction: column;
-  padding: 35px;
-  color: white;
-}
-
-button {
-  border: none;
-  background-color: unset;
-}
 button,
 input {
   border: none;
+  background-color: unset;
+}
+
+#login_form_container {
+  padding: 35px;
 }
 
 label {
@@ -59,7 +44,6 @@ input:focus {
 p {
   margin: 0;
 }
-
 
 #login_choice button {
   background-color: #ffffffc1;
@@ -90,12 +74,11 @@ p {
 
 #login_container {
   margin: 15px 0 0 0;
-  display: flex;
-  flex-direction: column;
 }
 
 #login_container input {
   padding: 13px 10px;
+  background-color: #ffffff45;
 }
 
 #email_input {
@@ -237,50 +220,39 @@ table tr:last-child td:last-child {
   background-color: var(--secondary-color);
 }
 
-
-
-
 .panel_header h3 {
   color: white;
 }
 
-
-
-.text-white{
+.text-white {
   color: white;
 }
 
-.tables_container { 
-  overflow-x: auto; 
-  overflow-y: auto; 
+.tables_container {
+  overflow-x: auto;
+  overflow-y: auto;
   max-width: 100%;
 }
 
-.tables{
+.tables {
   margin: auto;
 }
-.uil-angle-down{
+.uil-angle-down {
   font-size: 2.2rem;
 }
 
-
-
-#home_hour{
+#home_hour {
   background-color: var(--secondary-color);
 }
 
-
-
-
-
-.primary-color{
+.primary-color {
   background-color: var(--primary-color);
 }
 
-.secondary-color{
+.secondary-color {
   background-color: var(--secondary-color);
 }
 
-.third-color{
+.third-color {
   background-color: var(--third-color);
 }
