--- a/public/style/style.css
+++ b/public/style/style.css
@@ -11,6 +11,7 @@ input::-webkit-inner-spin-button {
   --secondary-color: #45cfc1;
   --third-color: #00ad9b;
   --hover-color: #84848445;
+  --transparent-color: #ffffff45;
 }
 * {
   font-family: "Poppins", Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -18,9 +19,33 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+.primary-color {
+  background-color: var(--primary-color);
+}
+
+.secondary-color {
+  background-color: var(--secondary-color);
+}
+
+.third-color {
+  background-color: var(--third-color);
+}
+
+.transparent-color {
+  background-color: var(--transparent-color);
+}
+
+.m-2px {
+  margin: 2px;
+}
+
 a {
   text-decoration: none;
   color: unset;
+}
+
+p {
+  margin: 0;
 }
 button,
 input {
@@ -28,70 +53,21 @@ input {
   background-color: unset;
 }
 
-#login_form_container {
-  padding: 35px;
-}
-
-label {
-  margin-bottom: 3px;
-  margin-left: 3px;
-}
-
 input:focus {
   outline: none;
 }
 
-p {
-  margin: 0;
-}
-
 #login_choice button {
-  background-color: #ffffffc1;
   transition: background-color 0.5s;
-  margin: 2px;
 }
-
-#login_title {
-  font-weight: 800;
-  margin: 15px;
-}
-
 #submit_login {
-  padding: 15px 20px;
-  margin: 15px 0;
   border: white 3px solid;
-  background-color: #00bdaa;
-  color: white;
-  font-weight: bold;
   transition: background-color 0.5s;
 }
-
 #submit_login:hover,
 #login_choice button:hover {
   background-color: #ffffff45;
   cursor: pointer;
-}
-
-#login_container {
-  margin: 15px 0 0 0;
-}
-
-#login_container input {
-  padding: 13px 10px;
-  background-color: #ffffff45;
-}
-
-#email_input {
-  margin-bottom: 10px;
-}
-
-#password_input {
-  margin-bottom: 20px;
-}
-
-#login_form_header {
-  background-color: var(--secondary-color);
-  padding: 0 35px;
 }
 
 .hour {
@@ -211,16 +187,4 @@ table tr:last-child td:last-child {
 
 #home_hour {
   background-color: var(--secondary-color);
-}
-
-.primary-color {
-  background-color: var(--primary-color);
-}
-
-.secondary-color {
-  background-color: var(--secondary-color);
-}
-
-.third-color {
-  background-color: var(--third-color);
 }
