--- a/public/style/style.css
+++ b/public/style/style.css
@@ -7,11 +7,11 @@ input::-webkit-inner-spin-button {
 }
 
 :root {
-
+  --white: white;
   --gray: #f5f5f5;
   --primary-color: #00bdaa;
   --secondary-color: #45cfc1;
-  --third-color: #00ad9b;
+  --third-color: #64d8cd;
   --hover-color: #84848445;
   --transparent-color: #ffffff45;
 }
@@ -20,7 +20,9 @@ input::-webkit-inner-spin-button {
     "Helvetica Neue", sans-serif;
   margin: 0;
 }
-
+body{
+  background-color: var(--gray);
+}
 .primary-color {
   background-color: var(--primary-color);
 }
@@ -36,9 +38,15 @@ input::-webkit-inner-spin-button {
 .transparent-color {
   background-color: var(--transparent-color);
 }
-
+.white{
+  background-color: var(--white);
+}
 .gray{
   background-color: var(--gray);
+}
+
+.fw-500{
+  font-weight: 500;
 }
 
 .m-2px {
@@ -53,7 +61,9 @@ input::-webkit-inner-spin-button {
 a {
   text-decoration: none;
 }
-
+li{
+  list-style-type: none;
+}
 p {
   margin: 0;
 }
@@ -108,14 +118,6 @@ a {
   color: white;
 }
 
-.panel_buttons {
-  background-color: var(--secondary-color);
-  transition: background-color 0.4s;
-}
-.panel_buttons:hover {
-  background-color: var(--hover-color);
-}
-
 .tables th,
 .tables td {
   padding: 10px;
@@ -143,10 +145,6 @@ a {
   cursor: pointer;
 }
 
-.tables th {
-  background-color: var(--third-color);
-}
-
 table tr:first-child th:first-child {
   border-top-left-radius: 8px;
 }
@@ -166,47 +164,36 @@ table tr:last-child td:last-child {
   overflow-x: auto !important;
   table-layout: auto;
 }
-.tables td {
-  background-color: var(--secondary-color);
-}
 
 .panel_header h3 {
   color: white;
 }
 
-
-
 .tables_container {
   overflow-x: auto;
   overflow-y: auto;
-  max-width: 100%;
-}
-
-.tables {
-  margin: auto;
-}
-.uil-angle-down {
-  font-size: 2.2rem;
 }
 
 #home_hour {
   background-color: var(--secondary-color);
 }
-li{
-  list-style-type: none;
-}
-
-
 
 .navbuttons:hover{
-  background-color: var(--gray);
+  /* background-color: var(--gray); */
+  background-color: #ededed;
+  color: var(--primary-color);
 }
+
 
 .navbuttons.active{
-  background-color: var(--gray);
-
+  background-color: #ededed;
+  color: var(--primary-color);
 }
 
-.fw-500{
-  font-weight: 500;
+.dark-gray{
+  background-color: #ededed;
+}
+
+.shadow{
+  box-shadow: #212529 1px 1px;
 }
