--- a/public/style/style.css
+++ b/public/style/style.css
@@ -60,6 +60,7 @@ body{
 }
 a {
   text-decoration: none;
+  color: unset;
 }
 li{
   list-style-type: none;
@@ -113,8 +114,7 @@ input:focus {
   color: white;
 }
 
-#panel_section p,
-a {
+#panel_section p {
   color: white;
 }
 
