--- a/public/style/style.css
+++ b/public/style/style.css
@@ -192,3 +192,8 @@ table tr:last-child td:last-child {
 .shadow{
   box-shadow: #212529 1px 1px;
 }
+
+#recovery-email-input{
+  border: 2px solid var(--secondary-color);
+  color: gray;
+}
